# aiskillsync

./: README.md  pyproject.toml
aiskillsync/: __init__.py  __main__.py  cli.py  config.py  discovery.py  sync.py
docs/: AISKILLSYNC_SPEC.md
scripts/: __init__.py  migrate_aiskillsync_personal.py
tests/: test_cli.py  test_migration_helper.py
