[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aiskillsync"
version = "0.1.0"
description = "Global AI skill synchronization tooling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
aiskillsync = "aiskillsync.cli:main"
aiskillsync-migrate-personal = "scripts.migrate_aiskillsync_personal:main"

[tool.setuptools]
packages = ["aiskillsync", "scripts"]
